ProfilePic update implemented successfully.